Quite a bit of cleaning